# legm

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: argparse.md  handler.md  manager.md  metadata.md
legm/: __init__.py  argparse_utils.py  exp_handler.py  exp_manager.py  logging_utils.py  namespace_inits.py
tests/: dummy_exp_manager.py  init.py
