[project]
name = "legm"
version = "1.4.10"
description = "Your general ML experiment manager"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["machine learning", "logger", "experiment"]
authors = [
  {name = "Georgios (Yiorgos) Chochlakis", email = "georgioschochlakis@gmail.com" }
]
maintainers = [
  {name = "Georgios (Yiorgos) Chochlakis", email = "georgioschochlakis@gmail.com" }
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [  # Optional
  # Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "torch",
  "numpy",
  "matplotlib",
  "pyyaml",
  "tensorboard",
  "gridparse @ git+https://github.com/gchochla/gridparse.git@main",
]

[project.optional-dependencies]
dev = ["black", "pytest"]

[project.urls]
"Homepage" = "https://github.com/gchochla/legm"
"Bug Reports" = "https://github.com/gchochla/legm/issues"
"Source" = "https://github.com/gchochla/legm/"
